@@ -203,7 +203,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -298,7 +298,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -393,7 +393,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -488,7 +488,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -583,7 +583,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -678,7 +678,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -773,7 +773,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -868,7 +868,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -951,7 +951,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1046,7 +1046,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1141,7 +1141,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1236,7 +1236,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1331,7 +1331,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1426,7 +1426,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1521,7 +1521,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1616,7 +1616,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1711,7 +1711,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1806,7 +1806,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1889,7 +1889,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
@@ -1972,7 +1972,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: Initiate trade with a list of sums.
+              1. Add local currencies to the wallet balance.<br />2. Bug fixes.
           </div>
         
 
